<package>
  <name>lost_comms_recovery</name>
  <version>0.1.0</version>
  <description>
      If your robot loses connection to the base station it will stop motors or navigate home.
  </description>
  <maintainer email="danielsnider12@gmail.com">Daniel Snider</maintainer>
  <author email="danielsnider12@gmail.com">Daniel Snider</author>
  <license>Unlicense</license>
  <url type="website">http://wiki.ros.org/lost_comms_recovery</url>
  <url type="repository">https://github.com/danielsnider/lost_comms_recovery</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>

</package>
